# libmodbus

./: .gitignore  CMakeLists.txt  libmodbus-config.cmake
vcpkg/: CONTROL.in  pack.bat.in  port.cmake
